created header and added some CSS

--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <div class="header-container">
+        <div class="header-logo">
+            <div>Header Logo</div>
+        </div>
+
+            <div class="links">
+                <a class="links" href="*">header link one</a>
+                <a class="links" href="*">header link two</a>
+                <a class="links" href="*">header link three</a>
+            </div>
+    </div>
+
+
+    <div class="header-body">
+        <div>This website is awesome</div>
+        <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
+        <a href="*">Sign up</a>
+        <img src="*" alt="imageless frame">
+    </div>
 </body>
 </html>
