Removed HTML text. Now on making the containers.

--- a/index.html
+++ b/index.html
@@ -8,24 +8,11 @@
 </head>
 
 <body>
-    <div class="header-container">
-        <div class="header-logo">
-            <div>Header Logo</div>
-        </div>
-
-            <div class="links">
-                <a class="links" href="*">header link one</a>
-                <a class="links" href="*">header link two</a>
-                <a class="links" href="*">header link three</a>
-            </div>
-    </div>
-
-
-    <div class="header-body">
-        <div>This website is awesome</div>
-        <p>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</p>
-        <a href="*">Sign up</a>
-        <img src="*" alt="imageless frame">
-    </div>
+    <div class="header-container"> </div>
+    <div class="header-body"></div>
+    <div class="info-container"></div>
+    <div class="quote-container"></div>
+    <div class="signup-container"></div>
+    <div class="footer"></div>
 </body>
 </html>
