--- a/index.html
+++ b/index.html
@@ -8,8 +8,34 @@
 </head>
 
 <body>
-    <div class="header-container"> </div>
-    <div class="header-body"></div>
+    <div class="header-container"> 
+        <div class="logo">
+            <div>Header Logo</div>
+        </div>
+        <div class="links">
+            <div>header link one</div>
+            <div>header link two</div>
+            <div>header link three</div>
+        </div>
+    </div>
+
+    <div class="header-body">
+        <div class="body-container">
+            <div class="title-text">
+                <div> This website is awesome</div>
+            </div>
+            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            <div class="button">Sign Up</div>
+        </div>
+        <div class="image-container">
+            <div>this is a placeholder for an image</div>
+        </div>
+
+    </div>
+
+
+
+
     <div class="info-container"></div>
     <div class="quote-container"></div>
     <div class="signup-container"></div>
