Added proper classes to body-container class

--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
             <div class="title-text">
                 <div> This website is awesome</div>
             </div>
-            <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-            <div class="button">Sign Up</div>
+            <div class="text">
+                <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+            </div>
+            <div class="button">
+                <div>Sign Up</div>
+            </div>
         </div>
         <div class="image-container">
             <div>this is a placeholder for an image</div>
