Added/Finished Info Section and Footer

--- a/index.html
+++ b/index.html
@@ -34,15 +34,38 @@
         <div class="image-container">
             <div>this is a placeholder for an image</div>
         </div>
+    </div>
 
+    <div class="info-container">
+        <div class="info-header">
+            <div>Some random information.</div>
+        </div>
+        <div class="box-container">
+            <div class="box-text">
+                <div class="box"></div>
+                <div class="sub-text">this is some subtext under an illustartion or image</div>
+            </div>
+            <div class="box-text">
+                <div class="box"></div>
+                <div class="sub-text">this is some subtext under an illustartion or image</div>
+            </div>
+            <div class="box-text">
+                <div class="box"></div>
+                <div class="sub-text">this is some subtext under an illustartion or image</div>
+            </div>
+            <div class="box-text">
+                <div class="box"></div>
+                <div class="sub-text">this is some subtext under an illustartion or image</div>
+            </div>
+        </div>
     </div>
 
 
 
-
-    <div class="info-container"></div>
     <div class="quote-container"></div>
     <div class="signup-container"></div>
-    <div class="footer"></div>
+    <div class="footer">
+        <div> Copyright @ The Odin Project 2023</div>
+    </div>
 </body>
 </html>
