--- a/index.html
+++ b/index.html
@@ -60,9 +60,17 @@
         </div>
     </div>
 
+    <div class="quote-container">
+        <div class="quote">
+            <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actuall read it. Who knows? All I know is that it looks nice.</div>
+        </div>
+        <div class="author">
+            <div class="thor"> -Thor, God of Thunder</div>
+        </div>
+    </div>
 
 
-    <div class="quote-container"></div>
+
     <div class="signup-container"></div>
     <div class="footer">
         <div> Copyright @ The Odin Project 2023</div>
