Finished Sign-up container

--- a/index.html
+++ b/index.html
@@ -71,7 +71,19 @@
 
 
 
-    <div class="signup-container"></div>
+    <div class="signup-container">
+        <div class="sign-up">
+            <div class="left">
+                <div class="action">Call to action! It's time!</div>
+                <div class="sub-action">Sign up for our product by clicking that button right over there!</div>
+            </div>
+            <div class="right">
+                <div class="actual-button">Sign Up</div>
+            </div>
+        </div>
+    </div>
+
+
     <div class="footer">
         <div> Copyright @ The Odin Project 2023</div>
     </div>
