--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div>Header Logo</div>
         </div>
         <div class="links">
-            <div>header link one</div>
-            <div>header link two</div>
-            <div>header link three</div>
+            <a href="#">Header Link One</a>
+            <a href="#">Header Link One</a>
+            <a href="#">Header Link One</a>
         </div>
     </div>
 
