Changed to Hasbulla layout

--- a/index.html
+++ b/index.html
@@ -10,62 +10,67 @@
 <body>
     <div class="header-container"> 
         <div class="logo">
-            <div>Header Logo</div>
+            <div>Hasbulla Fan Page</div>
         </div>
         <div class="links">
-            <a href="#">Header Link One</a>
-            <a href="#">Header Link One</a>
-            <a href="#">Header Link One</a>
+            <a href="#">Home</a>
+            <a href="#">Store</a>
+            <a href="#">About</a>
         </div>
     </div>
 
     <div class="header-body">
         <div class="body-container">
             <div class="title-text">
-                <div> This website is awesome</div>
+                <div>Dedicated to Hasbulla Magomedov</div>
             </div>
             <div class="text">
-                <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+                <div>This website is dedicated to true Hasbulla fans. Sign up for Hasbulla updates with the button bellow.</div>
             </div>
             <div class="button">
                 <div>Sign Up</div>
             </div>
         </div>
         <div class="image-container">
-            <div>this is a placeholder for an image</div>
+            <img src="Images/Hasbulla Hands Up.jpeg" alt="Hasbulla ready to fight you">
+            <!-- <div>this is a placeholder for an image</div> -->
         </div>
     </div>
 
     <div class="info-container">
         <div class="info-header">
-            <div>Some random information.</div>
+            <div>Hasbulla Facts</div>
         </div>
         <div class="box-container">
             <div class="box-text">
-                <div class="box"></div>
-                <div class="sub-text">this is some subtext under an illustartion or image</div>
+                <img class="box" src="Images/Hasbulla in Car.jpeg" alt="Hasbulla in car.">
+                <!-- <div class="box"></div> -->
+                <div class="sub-text">Hasbulla is an avid car lover (not sure he can actually drive).</div>
             </div>
             <div class="box-text">
-                <div class="box"></div>
-                <div class="sub-text">this is some subtext under an illustartion or image</div>
+                <img class="box" src="Images/hasbulla with bird.jpeg" alt="Hasbulla with bird.">
+                <!-- <div class="box"></div> -->
+                <div class="sub-text">Hasbulla loves animals (including birds).</div>
             </div>
             <div class="box-text">
-                <div class="box"></div>
-                <div class="sub-text">this is some subtext under an illustartion or image</div>
+                <img class="box" src="Images/hasbulla with ufc belt.jpeg" alt="Hasbulla with MMA Belt">
+                <!-- <div class="box"></div> -->
+                <div class="sub-text">Hasbulla is a MMA Champ (not really).</div>
             </div>
             <div class="box-text">
-                <div class="box"></div>
-                <div class="sub-text">this is some subtext under an illustartion or image</div>
+                <img class="box" src="Images/Hasbulla:Khabib.avif" alt="Hasbulla with Khabib">
+                <!-- <div class="box"></div> -->
+                <div class="sub-text">Habulla is good friends with Khabib Nurmagomedov.</div>
             </div>
         </div>
     </div>
 
     <div class="quote-container">
         <div class="quote">
-            <div>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actuall read it. Who knows? All I know is that it looks nice.</div>
+            <div>“Best thing my teacher ever taught me was to keep my eyes on my own paper💸💸”</div>
         </div>
         <div class="author">
-            <div class="thor"> -Thor, God of Thunder</div>
+            <div class="thor">- Hasbulla</div>
         </div>
     </div>
 
@@ -74,8 +79,8 @@
     <div class="signup-container">
         <div class="sign-up">
             <div class="left">
-                <div class="action">Call to action! It's time!</div>
-                <div class="sub-action">Sign up for our product by clicking that button right over there!</div>
+                <div class="action">It's time to join Hasbulla nation!</div>
+                <div class="sub-action">Sign up for all future Hasbulla news, updates and more!</div>
             </div>
             <div class="right">
                 <div class="actual-button">Sign Up</div>
