Final secret update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div>This website is dedicated to true Hasbulla fans. Sign up for Hasbulla updates with the button bellow.</div>
             </div>
             <div class="button">
-                <div>Sign Up</div>
+                <a class="up" href="https://www.youtube.com/watch?v=RszqXEkMvo8" target="_blank">Sign Up</a>
             </div>
         </div>
         <div class="image-container">
